--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ coverage==7.6.1
 Django==4.2.2
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
+djangorestframework-simplejwt
 dnspython==2.6.1
 drf-yasg==1.21.7
 greenlet==3.0.3
@@ -35,3 +35,4 @@ tzdata==2024.1
 uritemplate==4.1.1
 vine==5.1.0
 wcwidth==0.2.13
+python-dotenv~=1.0.1
