--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 coverage==7.6.1
 Django==4.2.2
 django-cors-headers==4.4.0
+django-filter
 djangorestframework==3.15.2
 djangorestframework-simplejwt
 dnspython==2.6.1
